fix: horizontal scroll

--- a/src/app/styles/global/_reboot.scss
+++ b/src/app/styles/global/_reboot.scss
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -22,6 +23,7 @@ body {
   line-height: 24px;
   color: vars.$color-dark-liver;
   background-color: vars.$color-white;
+  overflow-x: hidden;
 }
 
 main {
