--- a/src/components/WhatsappLink/WhatsappLink.scss
+++ b/src/components/WhatsappLink/WhatsappLink.scss
@@ -9,8 +9,10 @@
   justify-content: center;
   align-items: center;
 
-  svg {
-    width: 40px;
-    height: 40px;
+  @include vp-767 {
+    svg {
+      width: 40px;
+      height: 40px;
+    }
   }
 }
